# strands-for-cosmos

./: .gitignore  404.html  AGENTS.md  CHANGELOG.md  README.md  SECURITY.md  index.html  justfile  mkdocs.yml  pyproject.toml  setup.py  sitemap.xml  test.py  test_cosmos.py
.github/workflows/: auto-release.yml  docs.yml
api-reference/: index.html
architecture/: index.html
assets/casts/: 01_basic_text.cast  02_video_caption.cast  04_embodied_reasoning.cast  05_tool_usage.cast
changelog/: index.html
demo/: strands-cosmos-demo.cast
demo/cosmos3_showcase/: README.md  reasoning_output.json
demo/cosmos3_v2v/: README.md
docs/: api-reference.md  architecture.md  changelog.md  index.md  notebooks.md
docs/assets/casts/: 03_driving_analysis.cast
docs/examples/: basic-text.md  driving.md  embodied.md  overview.md  tool-usage.md  video-caption.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: chain-of-thought.md  cosmos3-training.md  cosmos3.md  image-reasoning.md  jetson.md  tool-usage.md  video-understanding.md
examples/: 01_basic_text.py  02_video_caption.py  03_driving_analysis.py  04_embodied_reasoning.py  05_tool_usage.py  06_cosmos3_reason.py  07_cosmos3_generate.py  08_cosmos3_action.py  09_cosmos3_showcase.py  10_cosmos3_finetune.py  README.md
examples/basic-text/: index.html
examples/driving/: index.html
examples/embodied/: index.html
examples/overview/: index.html
examples/tool-usage/: index.html
examples/video-caption/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guide/chain-of-thought/: index.html
guide/cosmos3/: index.html
guide/cosmos3-training/: index.html
guide/image-reasoning/: index.html
guide/jetson/: index.html
guide/tool-usage/: index.html
guide/video-understanding/: index.html
landing/: index.html
notebooks/: 00_start_here.ipynb  01_basic_text.ipynb  02_video_caption.ipynb  03_driving_analysis.ipynb  04_embodied_reasoning.ipynb  05_tool_usage.ipynb  06_cosmos3_understand.ipynb  07_cosmos3_generate.ipynb  README.md  index.html
search/: search_index.json
strands_cosmos/: __init__.py  cosmos3_generator_model.py  cosmos3_reasoner_model.py  cosmos_model.py  cosmos_vision_model.py  fix_cublas.py
strands_cosmos/scripts/: __init__.py  c3_cli.py
strands_cosmos/tools/: __init__.py  _common.py  _security.py  build_engine.py  cosmos3.py  cosmos3_extra.py  cosmos3_train.py  cosmos_invoke.py  cosmos_vision_invoke.py  curate.py  distill.py  evaluate.py  export_onnx.py  image_read.py  inference.py  model_download.py  nats_pub.py  post_train.py  predict_generate.py  quantize.py  reason_hf.py  rtp.py  serve.py  sysinfo.py  transfer_generate.py  video_utils.py
stylesheets/: extra.css
tests/: test_cosmos3_imports.py  test_cosmos3_reason_e2e.py  test_imports.py  test_no_just_interpolation.py  test_security.py
